Bug 61665 - FORMCONTROLS Modifying column spacing in Writer causes crash
Summary: FORMCONTROLS Modifying column spacing in Writer causes crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-01 15:25 UTC by Krisztian Pinter
Modified: 2013-03-04 16:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (29.90 KB, text/plain)
2013-03-01 20:13 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Krisztian Pinter 2013-03-01 15:25:42 UTC
Modifying column spacing in Writer causes a crash.

Steps to reproduce:
1.) Create a new writer document.
2.) Format -> Columns; Set number of columns to 2.
3.) Turn off AutoWidth.
4.) Click on the increase button next to the Spacing field under the first two columns. Crash.
4b) Alternatively enter a number by hand, and click out, this froze my MATE.

Build Version 4.1.0.0.alpha0+ built on 2013-03-01
Under Linux Mint 14 MATE 64 bits
Comment 1 Jorendc 2013-03-01 20:12:39 UTC
Thanks for reporting!

I can confirm a crash using LibreOffice Version 4.1.0.0.alpha0+ (Build ID: ec583253c3d761847c93a77fa10c065fc334fab)

@Caolan: any thoughts?

#13 0x00007fffe632d0bb in GtkSalFrame::signalButton (pEvent=0x1b73ec0, frame=0x1958120) at /home/joren/core/vcl/unx/gtk/window/gtkframe.cxx:2974
#14 0x00007fffe5dbf599 in ?? () from /usr/lib/x86_64-linux-gnu/libgtk-x11-2.0.so.0
Comment 2 Jorendc 2013-03-01 20:13:02 UTC
Created attachment 75756 [details]
backtrace
Comment 3 Caolán McNamara 2013-03-04 12:10:05 UTC
reproducible, busted PercentFieldWrap rework
Comment 4 Commit Notification 2013-03-04 16:14:03 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=045e4115656063aa8d77e0581eaeea6cbf9e1c9e

Resolves: fdo#61665 modifying column width widgets crashes



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2013-03-04 16:16:52 UTC
Thanks for the testing and bug report, appreciate it!