Resolves: fdo#61665 modifying column width widgets crashes

Change-Id: Ifc9b31cad9e9935c4873c2785f203bd07d1f118e